--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,7 +19,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      - name: checkout
+      - name: install terraform
         uses: hashicorp/setup-terraform@v2.0.3
+
+      - name: check terraform version 
         run: terraform --version
+        
       
