--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -26,6 +26,8 @@ jobs:
         run: terraform --version
 
       - name: run terraform main.tf file
-        run: terraform plan
+        run: |
+        cd infra
+        terraformplan
         
       
