--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -19,6 +19,13 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
+      - name: setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: install terraform
         uses: hashicorp/setup-terraform@v2.0.3
 
