--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -26,6 +26,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: aws configured credentials
+        run: |
+          cat ~/.aws/credentials
+      
       - name: install terraform
         uses: hashicorp/setup-terraform@v2.0.3
 
