--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,7 +34,12 @@ jobs:
         uses: hashicorp/setup-terraform@v2.0.3
 
       - name: check terraform version 
-        run: terraform --version
+        run: |
+          terraform --version
+          terraform init
+          terraform fmt
+          terraform valdate
+          
 
       - name: run terraform main.tf file
         run: cd infra; terraform plan
