--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -41,6 +41,7 @@ jobs:
           
       - name: run terraform main.tf file
         run: |
+          cd infra
           terraform plan
         
       
